@@ -29,26 +29,33 @@
 namespace QuantLib {
 
     //! New Zealand calendar
-    /*! Holidays:
+    /*! Common holidays:
         <ul>
         <li>Saturdays</li>
         <li>Sundays</li>
-        <li>New Year's Day, January 1st (possibly moved to Monday or
-            Tuesday)</li>
-        <li>Day after New Year's Day, January 2st (possibly moved to
-            Monday or Tuesday)</li>
-        <li>Anniversary Day, Monday nearest January 22nd</li>
-        <li>Waitangi Day. February 6th</li>
+        <li>New Year's Day, January 1st (possibly moved to Monday or Tuesday)</li>
+        <li>Day after New Year's Day, January 2st (possibly moved to Monday or Tuesday)</li>
+        <li>Waitangi Day. February 6th (possibly moved to Monday since 2013)</li>
         <li>Good Friday</li>
         <li>Easter Monday</li>
-        <li>ANZAC Day. April 25th</li>
+        <li>ANZAC Day. April 25th (possibly moved to Monday since 2013)</li>
         <li>Queen's Birthday, first Monday in June</li>
         <li>Labour Day, fourth Monday in October</li>
         <li>Christmas, December 25th (possibly moved to Monday or Tuesday)</li>
-        <li>Boxing Day, December 26th (possibly moved to Monday or
-            Tuesday)</li>
+        <li>Boxing Day, December 26th (possibly moved to Monday or Tuesday)</li>
         <li>Matariki, in June or July, official calendar released for years 2022-2052</li>
         </ul>
+
+        Additional holidays for Wellington:
+        <ul>
+        <li>Anniversary Day, Monday nearest January 22nd</li>
+        </ul>
+
+        Additional holidays for Auckland:
+        <ul>
+        <li>Anniversary Day, Monday nearest January 29nd</li>
+        </ul>
+        
         \note The holiday rules for New Zealand were documented by
               David Gilbert for IDB (http://www.jrefinery.com/ibd/)
               The Matariki holiday calendar has been released by the NZ Government
@@ -58,13 +65,24 @@ namespace QuantLib {
     */
     class NewZealand : public Calendar {
       private:
-        class Impl final : public Calendar::WesternImpl {
+        class CommonImpl : public Calendar::WesternImpl {
           public:
-            std::string name() const override { return "New Zealand"; }
+            bool isBusinessDay(const Date&) const override;
+        };
+        class WellingtonImpl final : public CommonImpl {
+          public:
+            std::string name() const override { return "New Zealand (Wellington)"; }
+            bool isBusinessDay(const Date&) const override;
+        };
+        class AucklandImpl final : public CommonImpl {
+          public:
+            std::string name() const override { return "New Zealand (Auckland)"; }
             bool isBusinessDay(const Date&) const override;
         };
       public:
-        NewZealand();
+        //! NZ calendars
+        enum Market { Wellington, Auckland };
+        explicit NewZealand(Market market = Wellington);
     };
 
 }
