@@ -1,3 +1,8 @@
+2025-01-13  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/ql/time/calendars/newzealand.?pp: Updated from QuantLib 1.37 (rc)
+	* src/ql/time/calendars/unitedstates.cpp: Idem
+
 2024-10-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.13
